#2 Add No Data Image Shown When Filter Returns Empty And No Vehicle Notes Found, Adjust Spacing, Make Notes Fixed Height

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -7,3 +7,4 @@ $color-success: #14A098;
 $color-disabled: #DCDCDC;
 $color-available: #75c2ee;
 $color-footer: #37464f;
+$color-empty: #bfc2c6;
