--- a/assets/css/components/Pages/Vehicle/NotesCard.scss
+++ b/assets/css/components/Pages/Vehicle/NotesCard.scss
@@ -1,22 +1,31 @@
 .NotesCard {
     display: none;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     border-top: 2px solid #4e4d63;
+    overflow-y: auto;
+    height: 300px;
 }
 
 .NotesCard-content {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 100%;
+    flex-direction: column;
     padding: 20px 0;
     border-bottom: 1px solid #cccccc47;
 }
 
 .NotesCard-empty {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    padding-top: 20px;
+    align-items: center;
+    max-height: 250px;
+}
+
+.NotesCard-emptyImage {
+    width: 100%;
+    max-height: 200px;
+}
+
+.NotesCard-emptyNote {
+    color: $color-empty;
 }
